apps/tautulli/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: tautulli
spec:
  serviceName: tautulli
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
      containers:
      - name: tautulli
        image: ghcr.io/tautulli/tautulli:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8181
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /status
            port: 8181
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /status
            port: 8181
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: iscsi-persistent-fs6712x
        resources:
          requests:
            storage: 5Gi
